syntax = "proto2";

package com.trueaccord.proto.e2e;

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  collection_type: "scala.collection.immutable.Seq"
};

message CollectionTypesMessage {
  repeated    int32 repeated_int32    = 31;
  repeated    int64 repeated_int64    = 32;
  repeated   uint32 repeated_uint32   = 33;
  repeated   uint64 repeated_uint64   = 34;
  repeated   sint32 repeated_sint32   = 35;
  repeated   sint64 repeated_sint64   = 36;
  repeated  fixed32 repeated_fixed32  = 37;
  repeated  fixed64 repeated_fixed64  = 38;
  repeated sfixed32 repeated_sfixed32 = 39;
  repeated sfixed64 repeated_sfixed64 = 40;
  repeated    float repeated_float    = 41;
  repeated   double repeated_double   = 42;
  repeated     bool repeated_bool     = 43;
  repeated   string repeated_string   = 44;
  repeated    bytes repeated_bytes    = 45;

  enum Enum {
    ONE = 1;
    TWO = 2;
  }
  repeated     Enum repeated_enum     = 46;

  message NestedMessage {
  }

  repeated NestedMessage repeated_msg = 47;
  repeated NestedMessage repeated_msg_vector = 48 [(scalapb.field).collection_type="Vector"];
  repeated NestedMessage repeated_msg_list = 49 [(scalapb.field).collection_type="List"];
}

message TestPackedTypes {
  repeated    int32 packed_int32    =  90 [packed = true, (scalapb.field).collection_type="Vector"];
  repeated    int64 packed_int64    =  91 [packed = true, (scalapb.field).collection_type="Vector"];
  repeated   uint32 packed_uint32   =  92 [packed = true, (scalapb.field).collection_type="Vector"];
  repeated   uint64 packed_uint64   =  93 [packed = true, (scalapb.field).collection_type="Vector"];
  repeated   sint32 packed_sint32   =  94 [packed = true, (scalapb.field).collection_type="Vector"];
  repeated   sint64 packed_sint64   =  95 [packed = true, (scalapb.field).collection_type="Vector"];
  repeated  fixed32 packed_fixed32  =  96 [packed = true, (scalapb.field).collection_type="Vector"];
  repeated  fixed64 packed_fixed64  =  97 [packed = true, (scalapb.field).collection_type="Vector"];
  repeated sfixed32 packed_sfixed32 =  98 [packed = true, (scalapb.field).collection_type="Vector"];
  repeated sfixed64 packed_sfixed64 =  99 [packed = true, (scalapb.field).collection_type="Vector"];
  repeated    float packed_float    = 100 [packed = true, (scalapb.field).collection_type="Vector"];
  repeated   double packed_double   = 101 [packed = true, (scalapb.field).collection_type="Vector"];
  repeated     bool packed_bool     = 102 [packed = true, (scalapb.field).collection_type="Vector"];
  repeated CollectionTypesMessage.Enum packed_enum  = 103 [packed = true, (scalapb.field).collection_type="Vector"];
}
